Overrode max-width to prevent bleeding

--- a/src/component/CulturePage/IntroImages/style.css
+++ b/src/component/CulturePage/IntroImages/style.css
@@ -13,7 +13,7 @@
 
 .intro-images {
   display: flex;
-  flex-direction: row;
   width: 1050px;
   z-index: 1;
+  max-width: none;
 }
